[package]
name = "Lumen"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gxhash = "3.4.1"
image = "0.25.5"
imagepipe = "0.5.0"
imgref = "1.11.0"
kolor = "0.1.9"
once_cell = "1.20.2"
rawloader = "0.37.1"
rayon = "1.10.0"
rfd = "0.15.2"
smallvec = "1.13.2"
